# practise

./: .cursorignore  .gitignore  README.md  socket_client.c  socket_server.c
CrawlPandaDanmu/: pom.xml
antlr/array-init/: ArrayInit.g4  build.sh
antlr/cpp/extract-interface/: CMakeLists.txt  ExtractInterfaceListener.cpp  Java.g4  JavaBaseListener.cpp  JavaBaseListener.h  JavaLexer.cpp  JavaLexer.h  JavaListener.cpp  JavaListener.h  JavaParser.cpp  JavaParser.h  README.txt  build.sh  main.cpp
antlr/cpp/labeledexpr/: CMakeLists.txt  LabeledExpr.g4  README.txt  build.sh  clean.sh  t.expr
antlr/cpp/mysql/: CMakeLists.txt  README.txt  build.sh  clean.sh  main.cpp  test.sql
antlr/cpp/mysql/src/: main.cpp
antlr/expr/: build.sh
antlr/extract-interface/: build.sh
antlr/hello/: README.txt
antlr/labeledexpr/: EvalVisitor.java  LabeledExprLexer.java  LabeledExprParser.java  build.sh
antlr/privacy-policy-detection/: 1.txt  2.txt  3.txt  4.txt  EvalVisitor.java  Main.java  Matcher.g4  Matcher.interp  MatcherBaseVisitor.java  MatcherLexer.interp  MatcherLexer.java  MatcherLexer.tokens  MatcherParser.java  MatcherVisitor.java  Result.java  build.sh  pom.xml
antlr/rows/: README  RowsBaseListener.java  RowsListener.java  RowsParser.java
clangformat/: clang-format
cmake/: include-and-link.txt  nginx-CMakeLists.txt
cmake/demo/: CMakeLists.txt  README.md  main.cc
cmake/one-source-one-execute/: CMakeLists.txt  README.txt  t1.c  t2.c  t3.cpp  t4.cpp  t5.cpp
cmake_study/files_in_different_dir/: CMakeLists.txt  README.md
cmake_study/files_in_different_dir/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  testadd
cmake_study/files_in_different_dir/Debug/add/: Makefile
cmake_study/files_in_different_dir/add/: CMakeCache.txt  Makefile  add.h  cmake_install.cmake
cmake_study/multi_files/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.c
cmake_study/multi_files_easy/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake_study/single_file/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  helloworld
cpp/: CMakeLists.txt  PTHREAD_PROCESS_SHARED.cpp  ctor_dtor_sequence.cpp  main.cpp  mkdir.cpp  pcre-capture.c  pcrejit-multi-process-issue.cpp  qsort_in_c.c  read_write_binary_file.cpp  rw_binary_file_in_c.c  连续scanf.c
cpp/ctor_dtor_sequence/: test.cpp
cpp/operator/: test.cpp
cpp/read_write_binary_file/: test.cpp
docker/: Dockerfile
docker/proxy-docker/: Dockerfile  entrypoint.sh  my-prog.c
docker/test-env/: Dockerfile
docker/ubuntu-dev/: Dockerfile
flex_bison/anbn/: Makefile  anbn.l  anbn.y
flex_bison/backets-match/: Makefile  match.l  match.y
flex_bison/calc/: Makefile  calc.l  calc.y
flex_bison/calc-expr-term-factor/: Makefile  parser.l  parser.y
flex_bison/manual-samples/: build.sh  demo.l  echo-reject.l  echo.l  hex-value.l  input.l  reject-basic.l  sc.l  string.l  test.l  unput.l  yyless.l  yymore.l
gdb/: gdbinit
go/: data_race.go  diff-between-slice-array.go  postgres.go  rand.go  will_NOT_data_race.go  字符串字面量.go  语法.txt
html/: 依赖class查询元素.html
html/DOMContentLoaded/: css.php  index.html
html/test-a/: a.html  a21.html  a22.html  a23.html  a31.html  a32.html  a33.html  a34.html  a35.html  b.html  b21.html  b22.html  c.html  c21.html  index.html
html/thirdparty-cookie/: first-party-page.html  third-party.js
java/: mylog2.js
java/OcrCharging/: OcrCharging.java
javascript/: haveCommonAncestor.js  puppeteer.js
linux_command/: command.txt
linux_rime_wubi/: default.custom.yaml  linux_rime_wubi.txt  wubi_pinyin.custom.yaml
network_programming/: pthread_socket.cpp  socket_client.c  socket_server.c  tcp_ip_illustrated.txt
network_programming/all_test/: ABC.cpp  all_test  epoll_et_test.cpp  first_epoll.cpp  for_fork_puzzle.cpp  headers.h  main.cpp  pipe_test.cpp  recvmsg.cpp  sendmsg.cpp  (+3 more)
network_programming/pthread_socket/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pthread_socket.cpp
nginx-source-comment/: how-to-include-http-header-in-nginx-c.txt  ngx-queue-test.c  test-nginx.tar.bz2
nginx.conf/: nginx.conf  openresty-1.11.2.3.tar.gz.md5  splash.conf  test-location-match.conf  user_worker_events.conf  xdebug-issue-study.conf
php/: json_diff.php  ldap_client.php  logcjl.php  mysqli_connect.php  pipeline.php
python/: ChatCompletion.txt  bottle_demo.py  c-like-div-mod.py  check_nested_key.py  click_algo.py  current_path.py  dataprofiler_demo.py  delete_multi_repo.py  expect_impl.py  file_to_var.py  file_utils.py  ios.py  playwright.py  playwright_har_format.json  private_member_in_class.py  process_test.py  puppeteer.js  pytest_cmdline_args.py  read_write_binary_file.py  rw_binary_file.py  s3_downloader.py  test_variable_scope.py  var_to_file.py  watermark.py  wget.py  zhibo8.py
ragel/: build.sh  fa.rl  ragel_atoi.rl  test.rl
re2c/: dfa.l  example.l
reflex/: demo.l
security/: sqli.php  xxe.php
shell/: all-grammar.txt  argc.sh  compare_int_string.sh  for_loop.sh  fs.exp  function_if.sh  read_ini.sh  ssh.exp  ssh.ini
snippets/: c.include  cpp.include
sql/: detection_db.sql  portfolio.sql
supervisord/: idgen_supervisor.conf  restart.sh  run-once-sample.ini
systemtap/: Initial_Testing.stap  access-struct-member.c  access-struct-member.stp  argc-argv.stp  dump-memory.stp  dump-request-if-time-cost-greater-than-8ms.stp  dump-request-if-uri.stp  function_return_value.stp  print_string_with_length.stp  probe_func.stp  stap-request.stp
test/: log_main.py
tmux/: tmux.conf
vim/: vimrc
wechaty/: 100.py  clean.py  clean.sh  create_file_osx.sh  create_file_win.sh  delete_file_osx.sh  delete_file_win.sh  ding-dong-bot.ts  msg_count.py  msg_count_osx.py  msg_count_win.py  push_to_redis.py  readme.md  readme.txt  remark.py  room.py
windows/: CopyLinuxPath.ps1  RemoveFortiClientContextMenu.bat  SecureCRT.ahk  commands.py  copy_linux_path.py  copy_linux_path.reg  del_win_reg.py  dual monitor tools.txt  gethash.reg  gethash2.ps1  init.wsl  linux-start.vbs  rzsz.py
zshrc/: chenjili.zsh-theme  mac-zshrc  zshrc
(+190 files in other folders)
